--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.hemanthsridhar</groupId>
     <artifactId>testng-ext-dataprovider</artifactId>
-    <version>1.0</version>
+    <version>12.0.0</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -14,6 +14,8 @@
         <compiler.src.trgt>1.8</compiler.src.trgt>
         <compiler.version>3.1</compiler.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.gid>org.apache.poi</project.gid>
+        <project.artid>poi</project.artid>
     </properties>
 
     <name>testng-ext-dataprovider</name>
@@ -47,14 +49,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.apache.poi</groupId>
-            <artifactId>poi</artifactId>
-            <version>${poi.version}</version>
+            <groupId>${project.gid}</groupId>
+            <artifactId>${project.artid}</artifactId>
+            <version>3.15</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.poi</groupId>
-            <artifactId>poi-ooxml</artifactId>
-            <version>${poi.version}</version>
+            <groupId>${project.gid}</groupId>
+            <artifactId>${project.artid}-ooxml</artifactId>
+            <version>3.15</version>
         </dependency>
         <dependency>
             <groupId>org.apache.poi</groupId>
@@ -64,7 +66,7 @@
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>7.1.0</version>
+            <version>7.3.0</version>
         </dependency>
     </dependencies>
 
@@ -89,6 +91,7 @@
                     <execution>
                         <id>attach-sources</id>
                         <goals>
+                            <goal>test-jar</goal>
                             <goal>jar-no-fork</goal>
                         </goals>
                     </execution>
