--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.hemanthsridhar</groupId>
     <artifactId>testng-ext-dataprovider</artifactId>
-    <version>12.0.0</version>
+    <version>12.1.0</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -39,28 +39,21 @@
         <url>http://github.com/hemanthsridhar/testng-ext-dataprovidero/tree/master</url>
     </scm>
 
-    <distributionManagement>
-        <repository>
-            <id>bintray-hemanthsridhar-testaut-libs</id>
-            <name>hemanthsridhar-testaut-libs</name>
-            <url>https://api.bintray.com/maven/hemanthsridhar/testaut-libs/testng-ext-dataprovider/;publish=1;override=1</url>
-        </repository>
-    </distributionManagement>
 
     <dependencies>
         <dependency>
             <groupId>${project.gid}</groupId>
             <artifactId>${project.artid}</artifactId>
-            <version>3.15</version>
+            <version>${poi.version}</version>
         </dependency>
         <dependency>
             <groupId>${project.gid}</groupId>
             <artifactId>${project.artid}-ooxml</artifactId>
-            <version>3.15</version>
+            <version>${poi.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.poi</groupId>
-            <artifactId>poi-ooxml-schemas</artifactId>
+            <groupId>${project.gid}</groupId>
+            <artifactId>${project.artid}-ooxml-schemas</artifactId>
             <version>${poi.version}</version>
         </dependency>
         <dependency>
@@ -69,6 +62,15 @@
             <version>7.3.0</version>
         </dependency>
     </dependencies>
+
+
+    <distributionManagement>
+        <repository>
+            <id>bintray-hemanthsridhar-testaut-libs</id>
+            <name>hemanthsridhar-testaut-libs</name>
+            <url>https://api.bintray.com/maven/hemanthsridhar/testaut-libs/testng-ext-dataprovider/;publish=1</url>
+        </repository>
+    </distributionManagement>
 
     <build>
         <plugins>
